--- a/FacebookFanpageApp/Views/Home/Firstpage.cshtml
+++ b/FacebookFanpageApp/Views/Home/Firstpage.cshtml
@@ -1,17 +1,30 @@
-﻿@model FacebookFanpageApp.Models.FacebookModel
+﻿@using Resources;
+@model FacebookFanpageApp.Models.FacebookModel
 @{
     ViewBag.Title = "Home Page";
 }
 <div id="fb-root"></div>
 <div>
-    <p>Inhalt... JS SDK braucht bereits Third party cookies.</p>
+    @Html.Raw(FacebookAppResources.introText)
 </div>
 @if (Model.Me != null)
 {
-    <p>@Model.Me.Name</p>
-    <p>@Model.Me.FirstName</p>
-    <p>@Model.Me.LastName</p>
-    <p>@Model.Me.Email</p>
+    <p>
+        @Model.Me.Name<br />
+        @Model.Me.FirstName<br />
+        @Model.Me.LastName<br />
+        @Model.Me.Email<br />
+        @Model.Me.Gender<br />
+    </p>
+    if (Model.Me.Languages != null && Model.Me.Languages.Count > 0)
+    {
+    <ul>
+        @foreach (var lang in Model.Me.Languages)
+        {
+            <li>@lang.Name</li>
+        }
+    </ul>
+    }
 }
 else
 {
@@ -20,36 +33,37 @@ else
 
 @section scripts{
     <script>
-        var loginButtonHtml = "<button id='loginButton' class='ui-dialog ui-dialog-buttonpane'>anmelden</button>";
+        var loginButtonHtml = "<button id='loginButton' class='ui-dialog ui-dialog-buttonpane'>@FacebookAppResources.loginButton</button>";
+
         // Additional JS functions here
         window.fbAsyncInit = function () {
             FB.init({
                 appId: '@Model.App_Id', // App ID
-                channelUrl: '@Model.ChannelUrl', // Channel File
+                //channelUrl: '@Model.ChannelUrl', // Channel File
                 status: true, // check login status
                 cookie: true, // enable cookies to allow the server to access the session
                 xfbml: true  // parse XFBML
             });
 
             FB.getLoginStatus(function (response) {
+                var connected = false;
+                var extraStatusText = "";
                 if (response.status === 'connected') {
                     // the user is logged in and has authenticated your
                     // app, and response.authResponse supplies
                     // the user's ID, a valid access token, a signed
                     // request, and the time the access token 
                     // and signed request each expire
-
+                    connected = true;
                 } else if (response.status === 'not_authorized') {
                     // the user is logged in to Facebook, 
                     // but has not authenticated your app
-                    SetStatus(loginButtonHtml);
-                    jQuery("#loginButton").click(function (e) {
-                        e.preventDefault();
-                        login();
-                    });
                 } else {
                     // the user isn't logged in to Facebook.
-                    SetStatus("<p>Status unkown. No cookies?!</p>" + loginButtonHtml);
+                    extraStatusText = "<p>@FacebookAppResources.statusUnkown</p>";
+                }
+                if (!connected) {
+                    SetStatus(extraStatusText + loginButtonHtml);
                     jQuery("#loginButton").click(function (e) {
                         e.preventDefault();
                         login();
@@ -58,31 +72,32 @@ else
             });
             function login() {
                 FB.login(function (response) {
-                    var state = "ok";
+                    var state = "<p>ok</p>";
                     if (!response.authResponse) {
-                        state = "abgebrochen";
+                        state = "<p>@FacebookAppResources.canceled</p>";
                     } else {
                         var redirectUrl = "@Model.FanPageUrl";
                         top.location.href = redirectUrl;
                         return;
                     }
-                    SetStatus(state + "<br />" + loginButtonHtml);
+                    SetStatus(state + loginButtonHtml);
                     jQuery("#loginButton").click(function (e) {
                         e.preventDefault();
                         login();
                     });
-                }, { scope: 'email,user_likes' });
+                }, { scope: '@Model.Scope' });
             }
             function SetStatus(text) {
                 jQuery("#fbStatus").html(text);
             }
         };
+
         // Load the SDK asynchronously
         (function (d) {
             var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
             if (d.getElementById(id)) { return; }
             js = d.createElement('script'); js.id = id; js.async = true;
-            js.src = "//connect.facebook.net/de_DE/all.js";
+            js.src = "//connect.facebook.net/@Model.SignedRequest.User.Locale/all.js";
             ref.parentNode.insertBefore(js, ref);
         }(document));
     </script>
